--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @synesso @cwmyers @aparkersquare @mmollaverdi @hugomd @rgrnwd
+* @synesso @cwmyers @aparkersquare @mmollaverdi @hugomd @rgrnwd @sanju-paras @jishan33 @balomia @hannah-de @sarah-uw @ametke @millyrowboat
