add gpg signing env vars

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -23,4 +23,6 @@ jobs:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_USERNAME_APP_CASH }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD_APP_CASH }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ARTIFACT_SIGNING_PRIVATE_KEY }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SECRET_KEY }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secets.GPG_SECRET_PASSPHRASE }}
         run: bin/gradle clean build publishAllPublicationsToMavenCentralRepository --no-daemon
