--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -24,5 +24,5 @@ jobs:
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD_APP_CASH }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ARTIFACT_SIGNING_PRIVATE_KEY }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SECRET_KEY }}
-          ORG_GRADLE_PROJECT_signingPassword: ${{ secets.GPG_SECRET_PASSPHRASE }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.GPG_SECRET_PASSPHRASE }}
         run: bin/gradle clean build publishAllPublicationsToMavenCentralRepository --no-daemon
