Add Alejandro, Jackson and Connor as contributors

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @synesso @cwmyers @aparkersquare @mmollaverdi @hugomd @rgrnwd
+* @synesso @cwmyers @aparkersquare @mmollaverdi @hugomd @rgrnwd @ametke @cjustice @jacksoncook
