Updates CODEOWNERS to use GitHub team

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @synesso @cwmyers @aparkersquare @mmollaverdi @hugomd @rgrnwd @ametke @cjustice @jacksoncook
+* @block/bitcoin-network-os @mmollaverdi @cjustice @jacksoncook
