--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ GROUP=app.cash.kfsm
 VERSION_NAME=0.10.1-SNAPSHOT
 POM_URL=https://github.com/block/kfsm/
 POM_SCM_URL=https://github.com/block/kfsm/
-POM_SCM_CONNECTION=scm:git:git://github.com/cashapp/kfsm.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/cashapp/kfsm.git
+POM_SCM_CONNECTION=scm:git:git://github.com/block/kfsm.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/block/kfsm.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
