--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,5 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=square
 POM_DEVELOPER_NAME=Square, Inc.
 
-SONATYPE_HOST=DEFAULT
+SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
