--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -24,4 +24,4 @@ jobs:
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_CENTRAL_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SECRET_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_SECRET_PASSPHRASE }}
-        run: bin/gradle clean build publishAllPublicationsToMavenCentralRepository --no-daemon
+        run: bin/gradle release --no-daemon
