Prepare for release 0.10.2.

--- a/gradle-mvn-publish.gradle
+++ b/gradle-mvn-publish.gradle
@@ -2,7 +2,7 @@ apply plugin: libs.plugins.mavenPublishGradlePlugin.get().pluginId
 
 plugins.withId(libs.plugins.mavenPublishGradlePlugin.get().pluginId) {
     mavenPublish {
-        sonatypeHost="DEFAULT"
+        sonatypeHost="CENTRAL_PORTAL"
         releaseSigningEnabled = !getGpgKey().isEmpty()
     }
 }
