Add repository config

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 
 on:
   workflow_run:
-    workflows: ["publish"]
+    workflows: ["Publish to Maven Central"]
     types:
       - completed
 
