--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 GROUP=app.cash.kfsm
 VERSION_NAME=0.10.3
+VERSION=0.10.3
 POM_URL=https://github.com/block/kfsm/
 POM_SCM_URL=https://github.com/block/kfsm/
 POM_SCM_CONNECTION=scm:git:git://github.com/block/kfsm.git
