--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 GROUP=app.cash.kfsm
+VERSION_NAME=0.10.3
+
 VERSION=0.10.3
 POM_URL=https://github.com/block/kfsm/
 POM_SCM_URL=https://github.com/block/kfsm/
@@ -12,3 +14,7 @@ POM_DEVELOPER_NAME=Cash App
 
 SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
+
+mavenCentralPublishing=true
+mavenCentralAutomaticPublishing=true
+signAllPublications=true
