Align the two artifact descriptions

--- a/lib-guice/gradle.properties
+++ b/lib-guice/gradle.properties
@@ -1,4 +1,4 @@
 POM_ARTIFACT_ID=kfsm-guice
 POM_NAME=kFSM Guice Integration
-POM_DESCRIPTION=Guice integration module for kFSM (Kotlin Finite State Machine)
+POM_DESCRIPTION=Guice integration module for kFSM
 POM_PACKAGING=jar
