--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -1,4 +1,4 @@
 POM_ARTIFACT_ID=kfsm
-POM_NAME=kfsm
-POM_DESCRIPTION=Finite State Machine for Kotlin
+POM_NAME=kFSM
+POM_DESCRIPTION=Kotlin Finite State Machine
 POM_PACKAGING=jar
