--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,23 +41,19 @@ jobs:
         id: version
         run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
-      #      - name: Publish to Maven Central
-      #        if: steps.check-branch.outputs.tag_on_main == 'true'
-      #        env:
-      #          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_CENTRAL_USERNAME }}
-      #          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_CENTRAL_PASSWORD }}
-      #          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SECRET_KEY }}
-      #          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_SECRET_PASSPHRASE }}
-      #          ORG_GRADLE_PROJECT_VERSION_NAME: ${{ steps.version.outputs.version }}
-      #        run: bin/gradle publishToMavenCentral
+      - name: Publish to Maven Central
+        if: steps.check-branch.outputs.tag_on_main == 'true'
+        env:
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_CENTRAL_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_CENTRAL_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SECRET_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_SECRET_PASSPHRASE }}
+          ORG_GRADLE_PROJECT_VERSION_NAME: ${{ steps.version.outputs.version }}
+        run: bin/gradle publishToMavenCentral
 
       - name: Build HTML
         if: steps.check-branch.outputs.tag_on_main == 'true'
         run: bin/gradle dokkaHtmlMultiModule --no-daemon --stacktrace
-
-      - name: List dokka HTML output
-        if: steps.check-branch.outputs.tag_on_main == 'true'
-        run: ls -lR build/dokka/html
 
       - name: Upload HTML
         if: steps.check-branch.outputs.tag_on_main == 'true'
@@ -68,6 +64,6 @@ jobs:
 
       - name: Deploy GitHub Pages site
         if: steps.check-branch.outputs.tag_on_main == 'true'
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
         with:
           artifact_name: github-pages
