--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ RELEASE_SIGNING_ENABLED=true
 mavenCentralPublishing=true
 mavenCentralAutomaticPublishing=true
 signAllPublications=true
+
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
