--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -1,4 +1,4 @@
-POM_ARTIFACT_ID=kfsm
-POM_NAME=kFSM
-POM_DESCRIPTION=Kotlin Finite State Machine
+POM_ARTIFACT_ID=kfsm-v2
+POM_NAME=kFSM v2
+POM_DESCRIPTION=Kotlin Finite State Machine v2 - with transactional outbox pattern
 POM_PACKAGING=jar
