Pin Ubuntu image version to avoid Docker issues in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-24.02]
         cmd:
           - bin/gradle clean build -i --scan --no-daemon
 
